@@ -1,3 +1,4 @@
+* Manage model access
 * Manage time format
 * Deactivate attachment button when record is not created
 
